--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 
 /.vs/AOC24/FileContentIndex
 /.vs
+/09/.vs/09/FileContentIndex/49ff2f5a-a746-4887-9d83-63df29c4c761.vsidx
+/09/.vs/09/FileContentIndex/9c88ee73-89af-40ab-a020-18283888c149.vsidx
+/09/.vs/09/FileContentIndex/f1446fcf-f07b-442e-b031-9806f6393dab.vsidx
